--- a/Orbital/frontend/src/Login/dashboardPage.module.css
+++ b/Orbital/frontend/src/Login/dashboardPage.module.css
@@ -155,6 +155,7 @@
 .logoContainer h1 {
     color: #000055;
     font-size: 22px;
+    font-weight: bold;
     letter-spacing: 1px;
     margin: 0;
 } /*smiley logo text*/
