--- a/Orbital/frontend/src/Landing/landingPage.module.css
+++ b/Orbital/frontend/src/Landing/landingPage.module.css
@@ -644,7 +644,11 @@
 } /*error message*/
 
 .spinnerGroup {
+    display: block;
+    align-items: center;
+    justify-content: center;
     margin-top: 20px;
+    margin-bottom: 20px;
     text-align: center;
     font-size: 12px;
     color: black;
@@ -656,6 +660,8 @@
     background-color: blue;
     border-radius: 50%;
     position: relative;
+    top: 50%;
+    left: 50%;
     background: conic-gradient(
         rgb(98, 125, 213),
         rgb(0, 238, 255),
