--- a/Orbital/frontend/src/Profile/profilePage.module.css
+++ b/Orbital/frontend/src/Profile/profilePage.module.css
@@ -3,6 +3,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Calibri:wght@300&display=swap");
 
+@import "./colorPicker.module.css";
+
 * {
     margin: 0;
     padding: 0;
@@ -24,6 +26,24 @@
     user-select: none;
 } /*acts as the body{}*/
 
+.headerGroup {
+    display: flex;
+    position: fixed;
+    top: 5vh;
+    left: 7vw;
+}
+
+.headerGroup h2 {
+    color: var(--main-color);
+}
+
+.formContainer {
+    display: flex;
+    position: fixed;
+    top: 20vh;
+    left: 7vw;
+}
+
 .linkGroup {
     display: flex;
     position: fixed;
@@ -32,10 +52,10 @@
 } /*hyperlink to other pages*/
 
 .linkGroup button {
-    border: 2px solid rgba(0, 110, 255, 0.3);
+    border: 2px solid var(--border-color);
     border-radius: 30px;
     padding: 10px 30px;
-    color: #000055;
+    color: var(--main-color);
     text-decoration: none;
     font-weight: bold;
     letter-spacing: 1px;
@@ -44,6 +64,19 @@
 } /*hyperlink text*/
 
 .linkGroup button:hover {
-    background-color: #c6e2ff;
+    background-color: var(--background-color);
     cursor: pointer;
 } /*hyperlink on hover*/
+
+.colorContainer {
+    display: flex;
+    position: fixed;
+}
+
+.colorContainer h2 {
+    color: var(--main-color);
+}
+
+.colorPicker {
+    margin-left: 20px;
+}
