change color across webpages
able to customisable color in profile page which applies to landing, course, profile pages.

future plans: integrate with backend

--- a/Orbital/frontend/src/Profile/colorPicker.module.css
+++ b/Orbital/frontend/src/Profile/colorPicker.module.css
@@ -1,6 +1,7 @@
 :root {
-    --main-color: #000055;
-    /* --main-color-translucent: rgba(0, 0, 85, 0.3); */
-    --border-color: rgba(0, 110, 255, 0.3);
-    --background-color: #c6e2ff;
+    --mainText-color: #000055;
+    --pageBackground-color: #e8f7ff;
+    --border-color: rgba(0, 110, 255, 0.4);
+    --hover-color: #c6e2ff;
+    --focus-color: #afdeff;
 }
