--- a/Orbital/frontend/src/Course/coursePage.module.css
+++ b/Orbital/frontend/src/Course/coursePage.module.css
@@ -3,6 +3,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Calibri:wght@300&display=swap");
 
+@import "../Profile/colorPicker.module.css";
+
 * {
     margin: 0;
     padding: 0;
@@ -18,7 +20,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(#e8f7ff, #e5fffe);
+    background: var(--pageBackground-color);
     background-size: cover;
     background-position: center;
     user-select: none;
@@ -36,11 +38,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #000055;
+    color: var(--mainText-color);
     text-align: center;
-    border-bottom: 1px solid #000055;
+    border-bottom: 1px solid var(--mainText-color);
     z-index: 1;
-    background: linear-gradient(#bee8ff, #c9fffd);
+    background: linear-gradient(
+        var(--pageBackground-color),
+        var(--focus-color)
+    );
 }
 
 .courseTasksContainer {
@@ -60,7 +65,7 @@
 
 .sortByDropdownContainer label {
     font-size: 12px;
-    color: #000055;
+    color: var(--mainText-color);
 } /*sortby dropdown label*/
 
 .sortByDropdownContainer select {
@@ -68,10 +73,10 @@
     margin: 0 0 0 10px;
     background: white;
     outline: none;
-    border: 1.5px solid rgba(0, 110, 255, 0.5);
+    border: 1.5px solid var(--border-color);
     border-radius: 30px;
     font-size: 12px;
-    color: #000055;
+    color: var(--mainText-color);
     cursor: pointer;
     padding-left: 5px;
 } /*sortby dropdown box*/
@@ -79,7 +84,7 @@
 .sortByDropdownContainer select:focus {
     outline: none;
     border-color: #7cc8ff;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    box-shadow: 0 0 5px var(--border-color);
 } /*sortby dropdown box on focus*/
 
 .upcomingCompletedContainer {
@@ -110,7 +115,7 @@
 }
 
 .courseTasksHeader {
-    color: #000055;
+    color: var(--mainText-color);
     font-size: 25px;
     text-align: left;
     position: relative;
@@ -119,7 +124,7 @@
 } /*upcoming deadlines*/
 
 .courseTasksList p {
-    color: #000055;
+    color: var(--mainText-color);
     font-size: 25px;
     text-align: left;
     letter-spacing: 0.05vw;
@@ -139,7 +144,7 @@
     width: 15px;
     height: 15px;
     cursor: pointer;
-    accent-color: rgb(3, 97, 212);
+    accent-color: var(--mainText-color);
 }
 
 .taskItem {
@@ -149,7 +154,7 @@
 }
 
 .taskDescription {
-    color: #000055;
+    color: var(--mainText-color);
     font-size: 16px;
     text-align: left;
 }
@@ -193,7 +198,7 @@
 
 .courseProgressBarContainer p {
     text-align: left;
-    color: #000055;
+    color: var(--mainText-color);
 }
 
 .progressContainer {
@@ -201,13 +206,13 @@
     height: 15px;
     background-color: white;
     border-radius: 30px;
-    border: 1.5px solid rgba(0, 110, 255, 0.5);
+    border: 1.5px solid var(--border-color);
     margin: 10px 0 0 0;
 }
 
 .progressBar {
     height: 100%;
-    background-color: #c6e2ff;
+    background-color: var(--hover-color);
     border-radius: 30px;
     text-align: right;
     transition: width 0.2s ease-in-out;
@@ -217,7 +222,7 @@
     position: relative;
     top: -4px;
     padding: 10px;
-    color: #000055;
+    color: var(--mainText-color);
     font-weight: bold;
     font-size: 12px;
 }
@@ -231,11 +236,11 @@
 } /*hyperlink to other pages*/
 
 .linkGroup button {
-    border: 2px solid rgba(0, 110, 255, 0.3);
+    border: 2px solid var(--border-color);
     border-radius: 30px;
     padding: 10px 30px;
     margin: 10px;
-    color: #000055;
+    color: var(--mainText-color);
     background: none;
     text-decoration: none;
     font-weight: bold;
@@ -244,6 +249,6 @@
 } /*hyperlink text*/
 
 .linkGroup button:hover {
-    background-color: #c6e2ff;
+    background-color: var(--hover-color);
     cursor: pointer;
 } /*hyperlink on hover*/
