--- a/Orbital/frontend/src/Landing/landingPage.module.css
+++ b/Orbital/frontend/src/Landing/landingPage.module.css
@@ -3,6 +3,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Calibri:wght@300&display=swap");
 
+@import "../Profile/colorPicker.module.css";
+
 * {
     margin: 0;
     padding: 0;
@@ -18,7 +20,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(#e8f7ff, #e5fffe);
+    background: var(--pageBackground-color);
     background-size: cover;
     background-position: center;
     user-select: none;
@@ -51,10 +53,10 @@
 } /*hyperlink to other pages*/
 
 .linkGroup a {
-    border: 2px solid rgba(0, 110, 255, 0.3);
+    border: 2px solid var(--border-color);
     border-radius: 30px;
     padding: 10px 30px;
-    color: #000055;
+    color: var(--mainText-color);
     text-decoration: none;
     font-weight: bold;
     letter-spacing: 1px;
@@ -62,7 +64,7 @@
 } /*hyperlink text*/
 
 .linkGroup a:hover {
-    background-color: #c6e2ff;
+    background-color: var(--hover-color);
     cursor: pointer;
 } /*hyperlink on hover*/
 
@@ -75,7 +77,7 @@
 
 .profileGroup i {
     font-size: 50px;
-    color: #000055;
+    color: var(--mainText-color);
     cursor: pointer;
 } /*profile image icon*/
 
@@ -88,7 +90,7 @@
 } /*header and button*/
 
 .coursesHeader h2 {
-    color: #000055;
+    color: var(--mainText-color);
     font-size: 25px;
     text-align: left;
     letter-spacing: 0.05vw;
@@ -100,15 +102,16 @@
     border: none;
     outline: none;
     border-radius: 30px;
-    color: #fff;
+    border: 2px solid var(--border-color);
+    color: var(--mainText-color);
     cursor: pointer;
     font-size: 16px;
     font-weight: bold;
-    background: linear-gradient(to right, #3227b0, #408bfb);
+    background: transparent;
 } /*Add a course button*/
 
 .coursesHeader button:hover {
-    background: linear-gradient(to right, #408bfb, #3227b0);
+    background: var(--hover-color);
 } /*Add a course button on hover*/
 
 .coursesList {
@@ -132,13 +135,14 @@
     overflow: auto;
     word-wrap: break-word;
     position: relative;
-    box-shadow: inset 5px 5px 50px rgb(92, 187, 255), 5px 5px 5px #000055,
-        -5px -5px 5px rgb(92, 187, 255, 0.6);
+    box-shadow: inset 5px 5px 20px var(--border-color),
+        inset -5px -5px 20px var(--border-color),
+        5px 5px 5px var(--mainText-color), -5px -5px 5px var(--border-color);
 }
 
 .courseItem:hover {
     cursor: pointer;
-    background-color: #deeeff;
+    background-color: var(--hover-color);
 }
 
 .courseItemText {
@@ -147,7 +151,7 @@
     left: 50%;
     translate: -50% -50%;
     font-size: 24px;
-    color: #000055;
+    color: var(--mainText-color);
 }
 
 .courseTrashcan {
@@ -162,12 +166,12 @@
     top: 50%;
     left: 50%;
     translate: -50% -50%;
-    background: rgb(241, 250, 255);
+    background: var(--pageBackground-color);
     padding: 4vh 2vw 4vh 2vw;
     border-radius: 10px;
-    border: 2px solid rgba(8, 5, 76, 0.2);
-    box-shadow: 0 0 20px rgba(133, 212, 249, 0.5);
-    color: #000055;
+    border: 2px solid var(--border-color);
+    box-shadow: 0 0 20px var(--border-color);
+    color: var(--mainText-color);
 } /*popup box styling*/
 
 .backdropCoursePopup {
@@ -192,7 +196,7 @@
 
 .formGroup label {
     font-size: 16px;
-    color: #000055;
+    color: var(--mainText-color);
 } /*input box label*/
 
 .formGroup input {
@@ -200,21 +204,21 @@
     height: 100%;
     background: white;
     outline: none;
-    border: 1.5px solid rgba(0, 110, 255, 0.5);
+    border: 1.5px solid var(--border-color);
     border-radius: 10px;
     font-size: 16px;
-    color: #000055;
+    color: var(--mainText-color);
     padding: 8.5px;
 } /*input box content*/
 
 .formGroup input::placeholder {
-    color: rgba(0, 0, 85, 0.6);
+    color: rgba(0, 0, 0, 0.6);
 } /*input box placeholder*/
 
 .formGroup input:focus {
     outline: none;
-    border-color: #7cc8ff;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    border-color: var(--focus-color);
+    box-shadow: 0 0 5px var(--border-color);
 } /*input box on focus*/
 
 /*remindergroup contains dropdowncontainer and checkboxcontainer*/
@@ -235,7 +239,7 @@
     width: 15px;
     height: 15px;
     cursor: pointer;
-    accent-color: rgb(3, 97, 212);
+    accent-color: var(--mainText-color);
 } /*checkbox box*/
 
 .dropdownContainer {
@@ -249,18 +253,18 @@
     margin: 0 0 0 3vw;
     background: white;
     outline: none;
-    border: 1.5px solid rgba(0, 110, 255, 0.5);
+    border: 1.5px solid var(--border-color);
     border-radius: 10px;
     font-size: 16px;
-    color: #000055;
+    color: var(--mainText-color);
     padding: 8px;
     cursor: pointer;
 } /*dropdown box*/
 
 .dropdownContainer select:focus {
     outline: none;
-    border-color: #7cc8ff;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    border-color: var(--focus-color);
+    box-shadow: 0 0 5px var(--border-color);
 } /*dropdown box on focus*/
 
 .reminderGroupOthers {
@@ -279,22 +283,22 @@
     height: 100%;
     background: white;
     outline: none;
-    border: 1.5px solid rgba(0, 110, 255, 0.5);
+    border: 1.5px solid var(--border-color);
     border-radius: 10px;
     font-size: 16px;
-    color: #000055;
+    color: var(--mainText-color);
     padding: 8.5px;
     margin: 0 0 0 3vw;
 } /*input box content for other tasks*/
 
 .checkboxContainerOthers input[type="text"]::placeholder {
-    color: rgba(0, 0, 85, 0.6);
+    color: rgba(0, 0, 0, 0.6);
 } /*input box placeholder for other tasks*/
 
 .checkboxContainerOthers input[type="text"]:focus {
     outline: none;
-    border-color: #7cc8ff;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    border-color: var(--focus-color);
+    box-shadow: 0 0 5px var(--border-color);
 } /*input box on focus*/
 
 .checkboxContainerOthers input[type="checkbox"] {
@@ -302,7 +306,7 @@
     width: 15px;
     height: 15px;
     cursor: pointer;
-    accent-color: rgb(3, 97, 212);
+    accent-color: var(--mainText-color);
 } /*checkbox box for other tasks*/
 
 .dropdownContainerOthers {
@@ -316,18 +320,18 @@
     width: 21%;
     background: white;
     outline: none;
-    border: 1.5px solid rgba(0, 110, 255, 0.5);
+    border: 1.5px solid var(--border-color);
     border-radius: 10px;
     font-size: 16px;
-    color: #000055;
+    color: var(--mainText-color);
     padding: 8px;
     cursor: pointer;
 } /*dropdown box for other tasks*/
 
 .dropdownContainerOthers select:focus {
     outline: none;
-    border-color: #7cc8ff;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    border-color: var(--focus-color);
+    box-shadow: 0 0 5px var(--border-color);
 } /*dropdown box on focus for other tasks*/
 
 .addACoursePopup button {
@@ -336,23 +340,23 @@
     text-decoration: none;
     letter-spacing: 1px;
     font-size: 16px;
-    border: none;
+    border: 2px solid var(--border-color);
     border-radius: 30px;
-    color: #fff;
+    color: var(--mainText-color);
     cursor: pointer;
     font-weight: bold;
-    background: linear-gradient(to right, #3227b0, #408bfb);
+    background: transparent;
 } /*submission buttons for course popup*/
 
 .addACoursePopup button:hover {
-    background: linear-gradient(to right, #408bfb, #3227b0);
+    background: var(--hover-color);
 } /*submission buttons on hover for course popup*/
 
 .courseDraggable {
     padding: 16px;
     margin: 1.5vh 0 1.5vh 0;
     background-color: #fff;
-    border: 1.5px solid rgba(0, 110, 255, 0.5);
+    border: 1.5px solid var(--border-color);
     border-radius: 5px;
     cursor: grab;
     transition: background-color 0.2s ease;
@@ -361,7 +365,7 @@
 } /*course draggable on page 2 popup*/
 
 .courseDraggable:hover {
-    background-color: #c6e2ff;
+    background-color: var(--hover-color);
 } /*course draggable on hover on page 2 popup*/
 
 .spinnerGroup {
@@ -416,7 +420,7 @@
 
 /*TaskContainer*/
 .tasksHeader {
-    color: #000055;
+    color: var(--mainText-color);
     font-size: 25px;
     text-align: left;
     letter-spacing: 0.05vw;
@@ -431,7 +435,7 @@
 
 .sortByDropdownContainer label {
     font-size: 12px;
-    color: #000055;
+    color: var(--mainText-color);
 } /*sortby filterby dropdown label*/
 
 .sortByDropdownContainer select {
@@ -439,36 +443,36 @@
     margin: 0 0 0 10px;
     background: white;
     outline: none;
-    border: 1.5px solid rgba(0, 110, 255, 0.5);
+    border: 1.5px solid var(--border-color);
     border-radius: 30px;
     font-size: 12px;
-    color: #000055;
+    color: var(--mainText-color);
     cursor: pointer;
     padding-left: 5px;
 } /*sortby filterby dropdown box*/
 
 .sortByDropdownContainer select:focus {
     outline: none;
-    border-color: #7cc8ff;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    border-color: var(--focus-color);
+    box-shadow: 0 0 5px var(--border-color);
 } /*sortby filterby dropdown box on focus*/
 
 .addTaskButton {
     margin: 10px 0 0 0;
     width: 100%;
     height: 45px;
-    border: none;
     outline: none;
     border-radius: 30px;
-    color: #fff;
+    border: 2px solid var(--border-color);
+    color: var(--mainText-color);
     cursor: pointer;
     font-size: 16px;
     font-weight: bold;
-    background: linear-gradient(to right, #3227b0, #408bfb);
+    background: transparent;
 } /*add a task button*/
 
 .addTaskButton:hover {
-    background: linear-gradient(to right, #408bfb, #3227b0);
+    background: var(--hover-color);
 } /*add a task button on hover*/
 
 .tasksList {
@@ -483,7 +487,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #fff;
-    border: 1.5px solid rgba(0, 110, 255, 0.5);
+    border: 1.5px solid var(--border-color);
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 5px;
@@ -496,7 +500,7 @@
     width: 15px;
     height: 15px;
     cursor: pointer;
-    accent-color: rgb(3, 97, 212);
+    accent-color: var(--mainText-color);
 }
 
 .taskItem {
@@ -506,7 +510,7 @@
 }
 
 .taskDescription {
-    color: #000055;
+    color: var(--mainText-color);
     font-size: 16px;
     text-align: left;
 }
@@ -529,7 +533,7 @@
 
 .landingProgressBarContainer p {
     text-align: left;
-    color: #000055;
+    color: var(--mainText-color);
 }
 
 .progressContainer {
@@ -537,13 +541,13 @@
     height: 15px;
     background-color: white;
     border-radius: 30px;
-    border: 1.5px solid rgba(0, 110, 255, 0.5);
+    border: 1.5px solid var(--border-color);
     margin: 10px 0 0 0;
 }
 
 .progressBar {
     height: 100%;
-    background-color: #c6e2ff;
+    background-color: var(--hover-color);
     border-radius: 30px;
     text-align: right;
     transition: width 0.2s ease-in-out;
@@ -553,7 +557,7 @@
     position: relative;
     top: -4px;
     padding: 10px;
-    color: #000055;
+    color: var(--mainText-color);
     font-weight: bold;
     font-size: 12px;
 }
@@ -564,12 +568,12 @@
     top: 50%;
     left: 50%;
     translate: -50% -50%;
-    background: rgb(241, 250, 255);
+    background: var(--pageBackground-color);
     padding: 4vh 2vw 4vh 2vw;
     border-radius: 10px;
-    border: 2px solid rgba(8, 5, 76, 0.2);
-    box-shadow: 0 0 20px rgba(133, 212, 249, 0.5);
-    color: #000055;
+    border: 2px solid var(--border-color);
+    box-shadow: 0 0 20px var(--border-color);
+    color: var(--mainText-color);
 } /*popup box styling*/
 
 .backdropTaskPopup {
@@ -594,25 +598,25 @@
 
 .dropdownContainer2 label {
     font-size: 16px;
-    color: #000055;
+    color: var(--mainText-color);
 } /*dropdown box label*/
 
 .dropdownContainer2 select {
     width: 100%;
     background: white;
     outline: none;
-    border: 1.5px solid rgba(0, 110, 255, 0.5);
+    border: 1.5px solid var(--border-color);
     border-radius: 10px;
     font-size: 16px;
-    color: #000055;
+    color: var(--mainText-color);
     cursor: pointer;
     padding: 8px;
 } /*dropdown box*/
 
 .dropdownContainer2 select:focus {
     outline: none;
-    border-color: #7cc8ff;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    border-color: var(--focus-color);
+    box-shadow: 0 0 5px var(--border-color);
 } /*dropdown box on focus*/
 
 .formGroup2 {
@@ -622,7 +626,7 @@
 
 .formGroup2 label {
     font-size: 16px;
-    color: #000055;
+    color: var(--mainText-color);
 } /*input box label*/
 
 .formGroup2 input {
@@ -630,21 +634,21 @@
     height: 100%;
     background: white;
     outline: none;
-    border: 1.5px solid rgba(0, 110, 255, 0.5);
+    border: 1.5px solid var(--border-color);
     border-radius: 10px;
     font-size: 16px;
-    color: #000055;
+    color: var(--mainText-color);
     padding: 8.5px;
 } /*input box content*/
 
 .formGroup2 input::placeholder {
-    color: rgba(0, 0, 85, 0.6);
+    color: rgba(0, 0, 0, 0.6);
 } /*input box placeholder*/
 
 .formGroup2 input:focus {
     outline: none;
-    border-color: #7cc8ff;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    border-color: var(--focus-color);
+    box-shadow: 0 0 5px var(--border-color);
 } /*input box on focus*/
 
 .deadlineGroup {
@@ -654,7 +658,7 @@
 
 .deadlineGroup label {
     font-size: 16px;
-    color: #000055;
+    color: var(--mainText-color);
 } /*date picker box label*/
 
 .deadlineGroup input {
@@ -662,21 +666,21 @@
     height: 100%;
     background: white;
     outline: none;
-    border: 1.5px solid rgba(0, 110, 255, 0.5);
+    border: 1.5px solid var(--border-color);
     border-radius: 10px;
     font-size: 16px;
-    color: #000055;
+    color: var(--mainText-color);
     padding: 8.5px;
 } /*date picker box content*/
 
 .deadlineGroup input::placeholder {
-    color: rgba(0, 0, 85, 0.6);
+    color: rgba(0, 0, 0, 0.6);
 } /*date picker box placeholder*/
 
 .deadlineGroup input:focus {
     outline: none;
-    border-color: #7cc8ff;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    border-color: var(--focus-color);
+    box-shadow: 0 0 5px var(--border-color);
 } /*date picker box on focus*/
 
 .deadlineGroup input[type="date"]::-webkit-calendar-picker-indicator {
@@ -689,16 +693,16 @@
     text-decoration: none;
     letter-spacing: 1px;
     font-size: 16px;
-    border: none;
+    border: 2px solid var(--border-color);
     border-radius: 30px;
-    color: #fff;
+    color: var(--mainText-color);
     cursor: pointer;
     font-weight: bold;
-    background: linear-gradient(to right, #3227b0, #408bfb);
+    background: transparent;
 } /*submission buttons for task popup*/
 
 .addATaskPopup button:hover {
-    background: linear-gradient(to right, #408bfb, #3227b0);
+    background: var(--hover-color);
 } /*submission buttons on hover for task popup*/
 
 /*applies to all trashcan icon*/
